--- a/index.html
+++ b/index.html
@@ -22,12 +22,83 @@
     </div>
 </header>
 <section class="screen_one">
-<div>
-    <h3>The Golden Cockerel Classic </h3>
-    <p>  Dark beer, which is distinguished by pure taste and aroma, has a distinct taste of malt,
-        pleasant honey bitterness and light caramel flavor.  </p>
-    <a href="#0"> ORDER NOW </a>
-</div>
+    <div class="flex_container">
+        <div>
+            <img src="img/screen_one_content.png"/>
+        </div>
+        <div>
+        <h3>The Golden Cockerel Classic </h3>
+        <p> Dark beer, which is distinguished by pure taste and aroma, has a distinct taste of malt,
+            pleasant honey bitterness and light caramel flavor. </p>
+        <a href="#0"> ORDER NOW </a>
+            <div class="solod">
+                <img src="img/screen_one_content_two.png"/>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="screen_two">
+    <div class="screen_two_content">
+        <div class="flex_container">
+        <div>
+            <h3>0.1 Barley</h3>
+        </div>
+            <div class="balery">
+            <img src="img/solod.png"/>
+            <p> Our malt is grown in the personal lands of the company's
+                director, he follows the parasitic elevator personally every
+                day for selection. </p>
+            </div>
+        </div>
+        <div class="flex_position">
+            <div class="flex_container">
+                <div style="display: flex; justify-content: flex-end;">
+                    <h3>0.2 Hop</h3>
+                </div>
+                <div class="hop">
+                    <p> Hops are grown under the strict guidance of the Montreal
+                        Botanical Garden, and approved by the Ministry of Health. </p>
+                    <img src="img/Hop.png"/>
+                </div>
+            </div>
+        </div>
+        <div class="flex_container">
+            <div>
+                <h3>0.3 Clean water</h3>
+            </div>
+            <div class="balery">
+                <img src="img/clean_water.png"/>
+                <p> Well, the pride of our product is the water from the source
+                    of Koenigssee. Located in the southeast of Bavaria </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="screen_three">
+    <div class="screen_three_content">
+        <div>
+            <p> <span> The Golden Cockerel Nonalholic </span> - Getting beer is associated with the
+                fermentation process in several phases. consistency of the drink.</p>
+            <p> <span> The Golden Cockerel Alive </span> - Light beer is one of the most popular alcoholic beverages.
+                It is made by the method of fermentation of malt wort.</p>
+            <p> <span> The Golden Cockerel </span> - Beer is a low-alcohol beverage, which is produced by fermenting malt
+                wort with beer yeast.</p>
+            <div class="button">
+            <a href="#0"> ORDER NOW </a>
+            </div>
+        </div>
+    </div>
+    <div class="screen_three_content_two">
+        <div class="beer">
+        <a href="#0"><img src="img/beer.png"/></a>
+        </div>
+        <div class="beer_two">
+            <a href="#0"><img src="img/beer_two.png"/></a>
+        </div>
+        <div class="beer_three">
+            <a href="#0"><img src="img/beer_three.png"/></a>
+        </div>
+    </div>
 </section>
 </body>
 </html>
