--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
     </div>
 </section>
 <section class="screen_two">
+    <div class="title">
+        <h2>Advantages</h2>
+    </div>
     <div class="screen_two_content">
         <div class="flex_container">
         <div>
@@ -75,6 +78,9 @@
     </div>
 </section>
 <section class="screen_three">
+    <div class="title">
+        <h2>Range</h2>
+    </div>
     <div class="screen_three_content">
         <div>
             <p> <span> The Golden Cockerel Nonalholic </span> - Getting beer is associated with the
@@ -97,6 +103,32 @@
         </div>
         <div class="beer_three">
             <a href="#0"><img src="img/beer_three.png"/></a>
+        </div>
+    </div>
+</section>
+<section class="screen_four">
+    <h2>About</h2>
+    <div class="flex_container">
+        <div>
+            <h3>01</h3>
+            <p>Our company was created under the guidance of a hereditary
+                brewer from Switzerland. Employees were selected
+                for the  most severe criteria but at</p>
+            <h3>02</h3>
+            <p>The same time they receive decent enough earnings and
+                convenient working conditions, have a long working
+                life of workand a san-book</p>
+            <h3>03</h3>
+            <p>Our company is young enough, but we already win by the quality
+                of the product and its corresponding price, we are ready to develop
+                it and become better!</p>
+
+        </div>
+        <div>
+            <img src="img/about_img.jpg"/>
+        </div>
+        <div>
+
         </div>
     </div>
 </section>
