--- a/index.html
+++ b/index.html
@@ -132,5 +132,27 @@
         </div>
     </div>
 </section>
+<section class="screen_five">
+    <h2> Discounts </h2>
+    <form>
+    <div class="flex_container">
+        <div>
+        <input type="radio" id="radio-1" name="radio">
+        <label for="radio-1">
+            <img src="img/discont_content.jpg"/>
+        </label>
+        </div>
+        <div>
+            <input type="radio" id="radio-2" name="radio">
+            <label for="radio-2">
+                <img src="img/discont_content.jpg"/>
+            </label>
+            <div class="flex_container_button">
+                <button> ORDER NOW </button>
+            </div>
+        </div>
+    </div>
+    </form>
+</section>
 </body>
 </html>
