--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <img src="img/screen_one_content.png"/>
         </div>
         <div>
-        <h3>The Golden Cockerel Classic </h3>
-        <p> Dark beer, which is distinguished by pure taste and aroma, has a distinct taste of malt,
-            pleasant honey bitterness and light caramel flavor. </p>
-        <a href="#0"> ORDER NOW </a>
+            <h3>The Golden Cockerel Classic </h3>
+            <p> Dark beer, which is distinguished by pure taste and aroma, has a distinct taste of malt,
+                pleasant honey bitterness and light caramel flavor. </p>
+            <a href="#0"> ORDER NOW </a>
             <div class="solod">
                 <img src="img/screen_one_content_two.png"/>
             </div>
@@ -43,14 +43,14 @@
     </div>
     <div class="screen_two_content">
         <div class="flex_container">
-        <div>
-            <h3>0.1 Barley</h3>
-        </div>
+            <div>
+                <h3>0.1 Barley</h3>
+            </div>
             <div class="balery">
-            <img src="img/solod.png"/>
-            <p> Our malt is grown in the personal lands of the company's
-                director, he follows the parasitic elevator personally every
-                day for selection. </p>
+                <img src="img/solod.png"/>
+                <p> Our malt is grown in the personal lands of the company's
+                    director, he follows the parasitic elevator personally every
+                    day for selection. </p>
             </div>
         </div>
         <div class="flex_position">
@@ -83,20 +83,20 @@
     </div>
     <div class="screen_three_content">
         <div>
-            <p> <span> The Golden Cockerel Nonalholic </span> - Getting beer is associated with the
+            <p><span> The Golden Cockerel Nonalholic </span> - Getting beer is associated with the
                 fermentation process in several phases. consistency of the drink.</p>
-            <p> <span> The Golden Cockerel Alive </span> - Light beer is one of the most popular alcoholic beverages.
+            <p><span> The Golden Cockerel Alive </span> - Light beer is one of the most popular alcoholic beverages.
                 It is made by the method of fermentation of malt wort.</p>
-            <p> <span> The Golden Cockerel </span> - Beer is a low-alcohol beverage, which is produced by fermenting malt
+            <p><span> The Golden Cockerel </span> - Beer is a low-alcohol beverage, which is produced by fermenting malt
                 wort with beer yeast.</p>
             <div class="button">
-            <a href="#0"> ORDER NOW </a>
+                <a href="#0"> ORDER NOW </a>
             </div>
         </div>
     </div>
     <div class="screen_three_content_two">
         <div class="beer">
-        <a href="#0"><img src="img/beer.png"/></a>
+            <a href="#0"><img src="img/beer.png"/></a>
         </div>
         <div class="beer_two">
             <a href="#0"><img src="img/beer_two.png"/></a>
@@ -113,7 +113,7 @@
             <h3>01</h3>
             <p>Our company was created under the guidance of a hereditary
                 brewer from Switzerland. Employees were selected
-                for the  most severe criteria but at</p>
+                for the most severe criteria but at</p>
             <h3>02</h3>
             <p>The same time they receive decent enough earnings and
                 convenient working conditions, have a long working
@@ -135,24 +135,75 @@
 <section class="screen_five">
     <h2> Discounts </h2>
     <form>
-    <div class="flex_container">
+        <div class="flex_container">
+            <div>
+                <input type="radio" id="radio-1" name="radio">
+                <label for="radio-1">
+                    <img src="img/discont_content.jpg"/>
+                </label>
+            </div>
+            <div>
+                <input type="radio" id="radio-2" name="radio">
+                <label for="radio-2">
+                    <img src="img/discont_content.jpg"/>
+                </label>
+                <div class="flex_container_button">
+                    <button> ORDER NOW</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</section>
+<section class="reviews">
+    <h2> Reviews </h2>
+    <div class="reviews_carusel">
         <div>
-        <input type="radio" id="radio-1" name="radio">
-        <label for="radio-1">
-            <img src="img/discont_content.jpg"/>
-        </label>
+            <img src="img/user_one.png"/>
+            <div>
+                <h3>Linda Hemilton</h3>
+                <h4>Age - 22</h4>
+            </div>
         </div>
         <div>
-            <input type="radio" id="radio-2" name="radio">
-            <label for="radio-2">
-                <img src="img/discont_content.jpg"/>
-            </label>
-            <div class="flex_container_button">
-                <button> ORDER NOW </button>
+            <div class="coments">
+                <p> Quite good, but a little expensive </p>
             </div>
         </div>
     </div>
+</section>
+<section class="contant">
+    <h2>Contacts</h2>
+    <form name="coment" method="post">
+        <div>
+            <p>You can leave questions about joint
+                cooperation with us at the post office.</p>
+            <input type="text" name="name" placeholder="Name">
+            <input type="text" name="name" placeholder="Email">
+        </div>
+        <div class="coments_user">
+            <p>Your question?</p>
+            <textarea></textarea>
+            <div class="button_coment">
+                <button> SEND</button>
+            </div>
+        </div>
     </form>
 </section>
+<footer>
+    <div>
+        <ul>
+            <li>Kharkov City</li>
+            <li>Street Zhuravlevka 2</li>
+            <li>5th floor</li>
+            <li>093-459-04-79</li>
+            <li>goldencockerel2@gmail.com</li>
+        </ul>
+    </div>
+    <div>
+        <a href="#" class="twit"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+    </div>
+</footer>
+<script src="https://kit.fontawesome.com/421ca2af13.js" crossorigin="anonymous"></script>
 </body>
 </html>
