--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
 <body>
 <header>
     <div class="flex_container">
+        <div class="header_body">
         <a href="#0" class="logo">The Golnen Cockerel</a>
-        <ul>
-            <li><a href="#0"> Range </a></li>
-            <li><a href="#0">Development </a></li>
-            <li><a href="#0">About</a></li>
-            <li><a href="#0">Advantages </a></li>
-            <li><a href="#0"> Contacts </a></li>
-        </ul>
+        <div class="header_burger">
+            <span></span>
+            <span></span>
+            <span></span>
+
+        </div>
+        <nav class="header_menu">
+            <ul>
+                <li><a href="#0" class="header_link"> Range </a></li>
+                <li><a href="#0" class="header_link">Development </a></li>
+                <li><a href="#0" class="header_link">About</a></li>
+                <li><a href="#0" class="header_link">Advantages </a></li>
+                <li><a href="#0" class="header_link"> Contacts </a></li>
+            </ul>
+        </nav>
+        </div>
     </div>
 </header>
 <section class="screen_one animate__animated animate__fadeInUp wow" data-wow-delay = "0.2s">
@@ -178,6 +188,34 @@
                 </div>
             </div>
         </div>
+        <div class="reviews_content">
+            <div>
+                <img src="img/user_one.png"/>
+                <div>
+                    <h3>Linda Hemilton</h3>
+                    <h4>Age - 22</h4>
+                </div>
+            </div>
+            <div>
+                <div class="coments">
+                    <p> Quite good, but a little expensive </p>
+                </div>
+            </div>
+        </div>
+        <div class="reviews_content">
+            <div>
+                <img src="img/user_one.png"/>
+                <div>
+                    <h3>Linda Hemilton</h3>
+                    <h4>Age - 22</h4>
+                </div>
+            </div>
+            <div>
+                <div class="coments">
+                    <p> Quite good, but a little expensive </p>
+                </div>
+            </div>
+        </div>
     </div>
     </div>
 </section>
@@ -223,5 +261,6 @@
 <script src="js/owl.carousel.min.js"></script>
 <script src="https://kit.fontawesome.com/421ca2af13.js" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
+<script src="js/burger.js"></script>
 </body>
 </html>
