adaptive screed one

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
 <header>
@@ -37,7 +38,7 @@
 </header>
 <section class="screen_one animate__animated animate__fadeInUp wow" data-wow-delay = "0.2s">
     <div class="flex_container">
-        <div class="animate__animated animate__backInLeft wow" data-wow-delay = "0.7s">
+        <div class="beer_one animate__animated animate__backInLeft wow" data-wow-delay = "0.7s">
             <a href="#0"><img src="img/screen_one_content.png"/></a>
         </div>
         <div class="animate__animated animate__fadeInRight wow" data-wow-delay = "1s">
