--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         </div>
     </div>
     <div class="screen_three_content_two">
+        <div class="beer_position">
         <div class="beer">
             <a href="#0"><img src="img/beer.png"/></a>
         </div>
@@ -120,6 +121,7 @@
         </div>
         <div class="beer_three">
             <a href="#0"><img src="img/beer_three.png"/></a>
+        </div>
         </div>
     </div>
 </section>
@@ -153,13 +155,13 @@
     <h2> Discounts </h2>
     <form>
         <div class="flex_container">
-            <div>
+            <div class="stock">
                 <input type="radio" id="radio-1" name="radio">
                 <label for="radio-1">
                     <img src="img/discont_content.jpg"/>
                 </label>
             </div>
-            <div>
+            <div class="stock_two">
                 <input type="radio" id="radio-2" name="radio">
                 <label for="radio-2">
                     <img src="img/discont_content.jpg"/>
