--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         </div>
         <nav class="header_menu">
             <ul>
-                <li><a href="#0" class="header_link"> Range </a></li>
-                <li><a href="#0" class="header_link">Development </a></li>
-                <li><a href="#0" class="header_link">About</a></li>
-                <li><a href="#0" class="header_link">Advantages </a></li>
-                <li><a href="#0" class="header_link"> Contacts </a></li>
+                <li><a href="#Advantages" class="header_link">Advantages </a></li>
+                <li><a href="#range" class="header_link"> Range </a></li>
+                <li><a href="#About" class="header_link">About</a></li>
+                <li><a href="#Discounts" class="header_link">Discounts</a></li>
+                <li><a href="#Reviews" class="header_link">Reviews</a></li>
+                <li><a href="#Contacts" class="header_link"> Contacts </a></li>
             </ul>
         </nav>
         </div>
@@ -54,7 +55,7 @@
         </div>
     </div>
 </section>
-<section class="screen_two">
+<section class="screen_two" id="Advantages">
     <div class="title">
         <h2>Advantages</h2>
     </div>
@@ -94,7 +95,7 @@
         </div>
     </div>
 </section>
-<section class="screen_three">
+<section class="screen_three" id="range">
     <div class="title">
         <h2>Range</h2>
     </div>
@@ -125,7 +126,7 @@
         </div>
     </div>
 </section>
-<section class="screen_four">
+<section class="screen_four" id="About">
     <h2>About</h2>
     <div class="flex_container">
         <div>
@@ -151,7 +152,7 @@
         </div>
     </div>
 </section>
-<section class="screen_five">
+<section class="screen_five" id="Discounts">
     <h2> Discounts </h2>
     <form>
         <div class="flex_container">
@@ -173,7 +174,7 @@
         </div>
     </form>
 </section>
-<section class="reviews">
+<section class="reviews" id="Reviews">
     <h2> Reviews </h2>
     <div class="reviews_carusel">
     <div class="owl-carousel">
@@ -222,7 +223,7 @@
     </div>
     </div>
 </section>
-<section class="contant">
+<section class="contant" id="Contacts">
     <h2>Contacts</h2>
     <form name="coment" method="post">
         <div>
